fixing CTA section mobile, adding cta on hero banner work on app section, modifying image field for single prog.

--- a/wp-content/themes/mural-2021/src/css/sections/_appels-a-laction.scss
+++ b/wp-content/themes/mural-2021/src/css/sections/_appels-a-laction.scss
@@ -33,6 +33,10 @@
     }
 
     .card__title {
-        padding: $spacing*4 0 0;
+        padding: $spacing*2 0 0;
+        @include media-breakpoint-up(lg) {
+            padding: $spacing*4 0 0;
+        }
+            
     }
 }
