--- a/wp-content/themes/mural-2021/src/css/sections/_section-banner.scss
+++ b/wp-content/themes/mural-2021/src/css/sections/_section-banner.scss
@@ -193,5 +193,15 @@
 			height: auto;
 		}
 
+		.cta-banner {
+			@include media-breakpoint-up(lg) {
+				display: none;
+			}
+
+			.readmore {
+				justify-content: center;
+			}
+		}
+
 	}
 }
